--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,178 @@
     font-weight: 700;
     line-height: 1em;
 }
+
+
+.why-choose-us div {
+  position: relative;
+  width: 100px;
+}
+.why-choose-us div  svg{
+  position: absolute;
+  left: 1200px;
+  width: 100%;
+  top: -400px;
+}
+.why-choose-us div svg.blue{
+  top: -800px;
+  left: 12px;
+}
+
+.tv-apps{
+  background-color: var(--blue);
+  color: #fff;
+  /* padding: 60px auto 10px; */
+}
+.flex-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  width: 80%;
+  margin: auto;
+  padding: 50px 20px ;
+}
+.tv-heading {
+  text-align: center;
+  padding-top: 50px;
+}
+.flex-container h2{
+  padding: 20px 0;
+}
+.flex-container p{
+  line-height: 2em;
+  margin: 10px 0;
+} 
+.flex-container button{
+  background-color: var(--gold);
+  border: none;
+  border-radius: 8px;
+  padding: 15px 24px;
+  margin: 5px 0;
+   width: fit-content; 
+  cursor: pointer;
+  display: inline-block;
+  color: #fff;
+  font-weight: bold;
+}
+.flex-container button:hover{
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.12);
+  transition: .5s ease;
+  
+}
+
+
+
+
+
+
+
+
+/* contact.css */
+.contact{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 100px;
+}
+.center {
+  width: 400px;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.08), 3px 3px 10px rgba(0, 0, 0, 0.12);
+  background-color: white;
+  border-radius: 10px;
+  margin-top: 50px;
+}
+.center h1 {
+  text-align: center;
+  padding: 20px 0;
+  margin-bottom: 30px;
+  border-bottom: 1px solid silver;
+}
+.center form {
+  padding: 0 40px;
+  box-sizing: border-box;
+}
+form .txt-field {
+  position: relative;
+  border-bottom: 2px solid #adadad;
+  margin: 30px 0;
+}
+.txt-field input {
+  width: 100%;
+  padding: 0 5px;
+  height: 40px;
+  font-size: 16px;
+  border: none;
+  background: none;
+  outline: none;
+}
+.txt-field label {
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  color: #adadad;
+  transform: translateY(-50%);
+  font-size: 16px;
+  pointer-events: none;
+}
+.txt-field span::before {
+  content: "";
+  position: absolute;
+  top: 40px;
+  left: 0;
+  width: 0%;
+  height: 2px;
+  background-color: var(--gold);
+  transition: 0.5s;
+}
+
+.txt-field input:focus ~ label,
+.txt-field input:valid ~ label {
+  top: -5px;
+  color: var(--blue);
+  transition: 1s;
+}
+.txt-field input:focus ~ span::before,
+.txt-field input:valid ~ span::before {
+  width: 100%;
+}
+.pass {
+  margin: -5px 0 20px 5px;
+  color: #a6a6a6;
+  cursor: pointer;
+}
+.pass:hover {
+  text-decoration: underline;
+}
+input[type="submit"] {
+  width: 100%;
+  height: 50px;
+  border: 1px solid;
+  background: var(--blue);
+  border-radius: 25px;
+  font-size: 18px;
+  color: #e9f4fb;
+  font-weight: 700;
+  cursor: pointer;
+  outline: none;
+}
+input[type="submit"]:hover {
+  border-color: #2691d9;
+  transition: 0.5s;
+}
+.signup-link {
+  margin: 30px 0;
+  text-align: center;
+  font-size: 16px;
+  color: #666666;
+}
+.signup-link a {
+  color: var(--gold);
+  text-decoration: none;
+}
+.signup-link a:hover {
+  text-decoration: underline;
+}
    
   
   
