--- a/css/style.css
+++ b/css/style.css
@@ -370,6 +370,35 @@
   top: -800px;
   left: 12px;
 }
+.why-choose-us div svg.contact-blue{
+  top: -200px;
+  left: 20px;
+}
+@media(max-width:450px)  {
+  .counters div{
+    width: 30%;
+    height: 150px;
+  }
+  .counters h3{
+    font-size: 2rem;
+  }
+  .why-choose-us div  svg{
+    left: 400px;
+  }
+  .one1{
+    top: -200px;
+    left: -5px;
+}
+.two2{
+  top: -150px;
+  left: 100px;
+}
+
+ .three3{
+  top: -200px;
+  left: 200px;
+ } 
+}
 
 .tv-apps{
   background-color: var(--blue);
@@ -526,6 +555,113 @@ input[type="submit"]:hover {
 .signup-link a:hover {
   text-decoration: underline;
 }
+
+
+
+
+
+/* Footer.css */
+.waves{
+  display:block;
+}
+footer{
+  background-color: var(--blue);
+}
+.container-footer{
+  width: 80%;
+  margin: auto;
+}
+.footer-grid-parent{
+  display: grid;
+  padding: 30px 0;
+  grid-template-columns: 1.5fr 1fr 1fr 1fr 1.5fr;
+}
+
+.footer-grid-parent h5{
+  color: white;
+  padding-bottom: 10px ;
+}
+.list ul{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;  
+ }
+ .list li a{
+   text-decoration: none;
+   color: silver;
+   font-size: .8em;
+   
+   
+ }
+ .list li a:hover{
+   color:var(--gold);
+   text-decoration: underline;
+   transition:1s
+   
+   
+ }
+ .icons{
+   display: flex;
+   justify-content: space-evenly;
+ }
+ .icons div {
+  font-size: 20px;
+ }
+ .icons a{
+  font-size: 20px;
+  color: #fff;
+  
+ }
+ .icons i{
+  color: #fff;
+  background-color: #fff;
+  display: block;
+ }
+ .icons a :hover{
+   background-color: var(--gold);
+   transition: 1s ease;
+
+ }
+ .fa-brands{
+  font-size: 30px;
+  color: var(--gold);
+ }
+ /* media query for footer */
+ @media(max-width:450px){
+ .footer-grid-parent{
+  display:flex;
+  padding: 30px auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.footer-logo h3 {
+ margin-bottom: 1em;
+ font-size: 2em;
+}
+.footer-grid-parent h5{
+  transform: scale(1.2);
+  text-align: center;
+  margin: 1.5em 0em;
+  transform: scale(1.2);
+}
+.list{
+  text-align: center;
+  padding-left: 0;
+
+}
+.threee{
+  margin-bottom: 2em;
+}
+.list li a{
+  font-size: .9em;
+
+}
+.icons a img{
+  margin-left: 20px;
+}
+}
+
    
   
   
