--- a/css/style.css
+++ b/css/style.css
@@ -307,9 +307,18 @@
 
 
 /* media query for advanced section ends here */
+
+.cta-grid{
+  gap: 10em;
+}
   
 .cta-text h1 span{
     color: var(--gold);
+}
+.cta-text{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .counters{
     position: relative;
@@ -444,6 +453,16 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.12);
   transition: .5s ease;
   
+}
+@media(max-width:450px) {
+  .flex-container{
+   
+    grid-template-columns: 1fr ;
+    gap: 10px;
+    width: 80%;
+    margin: auto;
+    padding: 50px 20px ;
+  }
 }
 
 
@@ -629,6 +648,10 @@ footer{
  .fa-brands{
   font-size: 30px;
   color: var(--gold);
+ }
+ .footer-logo div{
+  background-color: #fff;
+  width: 30%;
  }
  /* media query for footer */
  @media(max-width:450px){
