--- a/css/style.css
+++ b/css/style.css
@@ -375,6 +375,20 @@
   width: 100%;
   top: -400px;
 }
+@media(max-width:450px) {
+  .why-choose-us div  svg{
+    display: none;
+  }
+  .why-choose-us div svg.blue{
+    display: none;
+  }
+  .why-choose-us div svg.contact-blue{
+    display: none;
+  }
+  .why-choose-us div svg.hero-gold{
+    display: none;
+  }
+}
 .why-choose-us div svg.blue{
   top: -800px;
   left: 12px;
@@ -395,9 +409,9 @@
   .counters h3{
     font-size: 2rem;
   }
-  .why-choose-us div  svg{
+  /* .why-choose-us div  svg{
     left: 400px;
-  }
+  } */
   .one1{
     top: -200px;
     left: -5px;
